@@ -1,6 +1,6 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
- * Copyright (C) 2015,2017                                CNRS
+ * Copyright (C) 2015,2017,2019                                CNRS
  * Copyright (C) 2015,2017                                Inria
  * Copyright (C) 2015,2017                                Université de Bordeaux
  *
@@ -19,6 +19,12 @@
 #include <starpu.h>
 #include <omp.h>
 
+#if !defined(STARPU_CLUSTER)
+int main(void)
+{
+	return 77;
+}
+#else
 #ifdef STARPU_QUICK_CHECK
 #define NTASKS 8
 #else
@@ -133,3 +139,4 @@ out:
 	starpu_shutdown();
 	return 0;
 }
+#endif
